domain nginx logic

--- a/backend/themes/default/templates/campaigns.html
+++ b/backend/themes/default/templates/campaigns.html
@@ -861,7 +861,7 @@
                     [
                         'ad_campaign_id', 'affiliate_network_name', 'browser', 'browser_version', 'connection_type',
                         'city', 'campaign_name', 'campaign_id', 'campaign_alias', 'conversion_cost', 'conversion_profit',
-                        'conversion_revenue', 'conversion_sale_time', 'conversion_time', 'cost', 'country', 'creative_id',
+                        'conversion_revenue', 'conversion_sale_time', 'conversion_time', 'cost', 'country', 'utm_creative',
                         'device_model', 'visitor_id', 'token', 'tid', 'subid', 'sub_id_1', 'sub_id_2', 'sub_id_3',
                         'sub_id_4', 'sub_id_5', 'sub_id_6', 'sub_id_7', 'sub_id_8', 'sub_id_9', 'sub_id_10', 'visitor_code',
                         'user_agent', 'ts_id', 'traffic_source_name', 'x_requested_with', 'stream_id', 'status', 'source',
