--- a/backend/themes/default/css/style.css
+++ b/backend/themes/default/css/style.css
@@ -1,7 +1,46 @@
-body {
-  /*background-color: #f5f5f5;*/
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .red { background-color: #f44336; }
 .green { background-color: #4caf50; }
 .blue { background-color: #2196f3; }
+
+#overlay {
+  position: fixed;
+  backdrop-filter: blur(4px);
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 9999;
+  display: none;
+}
+#overlay {
+  position: fixed;
+  inset: 0; /* shorthand for top, left, bottom, right: 0 */
+  backdrop-filter: blur(4px);
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 99999;
+  display: none;
+}
+
+#overlay .spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.spinner {
+  border: 6px solid #f3f3f3;
+  border-top: 6px solid #3498db;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: translate(-50%, -50%) rotate(0deg); }
+  100% { transform: translate(-50%, -50%) rotate(360deg); }
+}
