updated DB - clicks, visits and separate Table in PG

--- a/backend/themes/default/templates/campaigns.html
+++ b/backend/themes/default/templates/campaigns.html
@@ -1004,8 +1004,7 @@
                         'search_engine', 'sample', 'revenue', 'parent_campaign_id', 'previous_status', 'profit',
                         'referrer', 'region', 'os_version', 'os', 'original_status', 'operator', 'offer_value', 'keyword',
                         'landing_id', 'language', 'offer', 'offer_id', 'offer_name', 'isp', 'is_using_proxy', 'ip',
-                        'is_bot', 'from_file', 'external_id', 'device_type', 'current_domain', 'date', 'debug', 'destination',
-                        'device_brand'
+                        'is_bot', 'from_file', 'external_id', 'device_type', 'current_domain', 'date', 'debug', 'destination'
                     ]
             }
         },
